array.island.Island.scala.error
Erreur de compilation :
Island:5: error: too many arguments for method apply: (i: Int)Int in class Array
    if(num(1,i-1)<num(1,i)){
          ^Island:5: error: too many arguments for method apply: (i: Int)Int in class Array
    if(num(1,i-1)<num(1,i)){
                     ^