array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux:Int=0
  for(i<-2 to num.length){
    if(num(1,i-1)<num(1,i)){
      nbNiveaux+=1
    }
  }
  return nbNiveaux
}